--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
 <html lang=“pt-br”>
 
 <head>
-
-<title>Título da página</title>
-
-<meta charset=“utf-8”>
-
+    <title>Título da página</title>
+    <meta charset=“utf-8”>
 </head>
-
 <body>
 
-<h1>Pensar e Responder aula 10</h1>
-
-
+    <h1>Pensar e Responder aula 10</h1>
+    <h3><a href="https://jgvelha.netlify.app/">Vai um joguinho ai?</a></h3>
 </body>
 
 </html>
